# isometric-city

./: .env.example  .gitignore  AGENTS.md  Multiplayer.md  PATCH_NOTES.md  PLAYER_GUIDE.md  PR_DESCRIPTION.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SUPABASE.md  deploy.sh  env.example  eslint.config.mjs  gt-lock.json  gt.config.json  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
agent-logs/: .gitkeep
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
convex/: elevation.ts  schema.ts
convex/_generated/: api.d.ts
desktop/: app.js  index.html  styles.css
desktop-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/scripts/: generate-icons.mjs
desktop-app/src/: App.tsx  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
e2e/fixtures/: game.fixture.ts
e2e/pages/: game.page.ts
e2e/tests/: coop.spec.ts  game-canvas.spec.ts  game-ui.spec.ts  landing.spec.ts  (+2 more)
messages/: en.json  tr.json
public/: manifest.json  offline.html  sw.js
scripts/: analyze-agent-logs.mjs  check-convex-tiles.ts  extract-sprite.mjs  fix-coaster-borders.mjs  generate-icons.sh  optimize-assets.mjs  process-etopo1.ts  tower-e2e-smoke.mjs
src/: middleware.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
supabase/: schema.sql
wasm/: Cargo.toml
wasm/pkg/: isocoaster_wasm.d.ts  isocoaster_wasm.js  isocoaster_wasm_bg.wasm  isocoaster_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
wasm/src/game/: building.rs  coaster.rs  guest.rs  mod.rs  state.rs  tile.rs  tool.rs
wasm/src/render/: buildings.rs  canvas.rs  guests.rs  isometric.rs  mod.rs  sprites.rs  terrain.rs  tracks.rs
wasm/src/sim/: guest_ai.rs  mod.rs  pathfinding.rs  trains.rs
(+364 files in other folders)
