[package]
name = "iso_desktop"
version = "0.1.0"
description = "IsoCity + IsoCoaster desktop shell"
authors = ["Iso Desktop"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
