[package]
name = "isocoaster-wasm"
version = "0.1.0"
edition = "2021"
authors = ["IsoCoaster Team"]
description = "WebAssembly version of IsoCoaster theme park game"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlImageElement",
    "Performance",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "CssStyleDeclaration",
]

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
